--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,119 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>AirBnB clone</title>
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="styles/4-common.css">
-	<link rel="stylesheet" href="styles/6-filters.css">
-	<link rel="stylesheet" href="styles/3-header.css">
-	<link rel="stylesheet" href="styles/3-footer.css">
-	<link rel="stylesheet" href="styles/8-places.css">
-	<link rel="icon" href="images/icon.png">
-</head>
-<body>
-	<header></header>
-	<div class="container">
-		<section class="filters">
-		 	<div class="locations">
-				<h3>States</h3>
-				<h4>ie. Addis Ababa, Dire Dawa...</h4>
-				<div class="popover">
-					<h2>Addis Ababa</h2>
-					<ul>
-						<li>Bole</li>
-						<li>piassa</li>
-						<li>Mexico</li>
-					</ul>
-					<h2>Dire Dawa</h2>
-					<ul>
-						<li>Konel</li>
-						<li>Ashewa</li>
-						<li>Kezira</li>
-					</ul>
-				</div>
-			</div><div class="amenities">
-				<h3>Amenities</h3>
-				<h4>ie. Internet,Kitchen ...</h4>
-				<div class="popover">
-					<ul>
-						<li>Internet</li>
-						<li>Tv</li>
-						<li>Kitchen</li>
-						<li>Iron</li>
-						<li>Swimming pool</li>
-					</ul>
-				</div>
-			</div>
-			<button>Search</button>	
-		</section>
-		<section class="places">
-		<h1>Places</h1>
-		<div class="listing">
-			<article>
-			<div class="list-motel">
-				<h2> Villa</h2>
-				<div class="price_by_night"><p>$50</p></div>
-			</div>
-			<div class="information">
-				<div class="max_guest"><p>5 Guests</p></div>
-				<div class="number_rooms"><p>4 Room</p></div>
-				<div class="number_bathrooms"><p>3 Bathrooms</p></div>
-			</div>
-				<div class="user"><p><b>Owner</b>: Haile G/selasse<p></div>
-				<div class="description"><p>Every booking includes free protection from Host cancellations, listing inaccuracies, and other issues like trouble checking in.</p>
-				</div>
-		</article>
-		<article>
-			<div class="list-motel">
-				<h2> Apartment</h2>
-				<div class="price_by_night"><p>$80</p></div>
-			</div>
-			<div class="information">
-				<div class="max_guest"><p>3 Guests</p></div>
-				<div class="number_rooms"><p>2 Room</p></div>
-				<div class="number_bathrooms"><p>2 Bathrooms</p></div>
-			</div>
-				<div class="user"><p><b>Owner</b>: Kenenisa Bekele</p></div>
-				<div class="description"><p>Every booking includes free protection from Host cancellations, listing inaccuracies, and other issues like trouble checking in.</p>
-					</div>
-		</article>
-		<article>
-			<div class="list-motel">
-				<h2>Tiny Home</h2>
-				<div class="price_by_night"><p>$35</p></div>
-			</div>
-			<div class="information">
-				<div class="max_guest"><p>1 Guests</p></div>
-				<div class="number_rooms"><p>1 Room</p></div>
-				<div class="number_bathrooms"> <p>1 Bathrooms</p></div>
-			</div>	
-				<div class="user"><p><b>Owner</b>: Abebe Getahun</p></div>
-				<div class="description">
-					<p>The living room, then the toilet, then the bedroom.
-					Guests can dine on the perched terrace.</p>
- 				</div>
-			
-		</article>
-		<article>
-			<div class="list-motel">
-				<h2>VIP Sweet</h2>
-				<div class="price_by_night"><p>$90</p></div>
-			</div>
-			<div class="information">
-				<div class="max_guest"><p>6 Guests</p></div>
-				<div class="number_rooms"><p>5 Room</p></div>
-				<div class="number_bathrooms"><p>5 Bathrooms</p></div>
-			</div>
-				<div class="user"><p><b>Owner</b>: Belaneh Kinde</p></div>
-				<div class="description"><p>Every booking includes free protection from Host cancellations, listing inaccuracies, and other issues like trouble checking in.</p>
-			</div>
-		</article>
-		</div>
-		</section>
-	</div>
-	<footer>
-		Best School
-	</footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+    <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
+    <link rel="stylesheet" type="text/css" href="styles/8-places.css">
+    <link rel="icon" type="image/png" href="./images/icon.png">
+    <link rel="icon" type="image/png" href="./images/icon_group.png">
+    <link rel="icon" type="image/png" href="./images/icon_bed.png">
+    <link rel="icon" type="image/png" href="./images/icon_bath.png">
+    <title>Airbnb</title>
+  </head>
+  <body>
+    <header>
+    </header>
+    <div class="container">
+      <section class="filters">
+	<div class="locations">
+	  <h3>States</h3>
+          <h4>California, Arizona...</h4>
+          <ul class="popover">
+            <li><h2>Arizona:</h2>
+              <ul>
+                <li>Page</li>
+                <li>Page2</li>
+              </ul>
+            </li>
+            <li><h2>California:</h2>
+              <ul>
+                <li>San Francisco</li>
+                <li> Los Altos</li>
+              </ul>
+          </ul>
+        </div>
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>Internet, Kitchen...</h4>
+          <ul class="popover">
+            <li>Internet</li>
+            <li>TV<li>
+            <li>Kitchen</li>
+            <li>Iron</li>
+          </ul>
+        </div>
+	<button>Search</button>
+      </section>
+      <section class="places">
+	<h1>Places</h1>
+        <article>
+          <h2>My home</h2>
+          <div class="price_by_night">$80</div>
+          <div class="information">
+            <div class="max_guest">2 guests</div>
+            <div class="number_rooms">1 bedroom</div>
+            <div class="number_bathrooms">1 bathroom</div>
+          </div>
+          <div class="user"><strong>Owner:</strong> Longye Chen</div>
+          <div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It is located at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, and 3 stops to Jingan Temple.</div>
+	</article>
+        <article><h2>Tiny house</h2>
+          <div class="price_by_night">$50</div>
+          <div class="information">
+            <div class="max_guest">1 guest</div>
+            <div class="number_rooms">1 bedroom</div>
+            <div class="number_bathrooms">1 bathroom</div>
+          </div>
+          <div class="user"><strong>Owner:</strong> Mel X</div>
+          <div class="description">This is a tiny, tight, and cozy getaway. Affordable and not too shabby. Perfect for those on a budget.</div>
+        </article>
+        <article><h2>A suite</h2>
+          <div class="price_by_night">$160</div>
+          <div class="information">
+            <div class="max_guest">2 guests</div>
+            <div class="number_rooms">1 bedroom</div>
+            <div class="number_bathrooms">2 bathrooms</div>
+          </div>
+          <div class="user"><strong>Owner:</strong> Christina Chiu</div>
+          <div class="description">Beautiful suite with balcony worthy of Romeo and Juliet's love story.</div>
+        </article>
+      </section>
+    </div>
+    <footer>
+      Holberton School
+    </footer>
+  </body>
 </html>
