--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Airbnb</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB Clone</title>
+
     <style>
-      header {background-color:#FF0000; height:70px; width:100%;}
-      body {margin:0; padding:0;}
-      footer {background-color:#00FF00; height:60px; width:100%; position:absolute; bottom:0; text-align:center; line-height:60px;}
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        header {
+            background-color: #FF0000;
+            height: 70px;
+            width: 100%;
+        }
+
+        footer {
+            background-color: #00FF00;
+            height: 60px;
+            width: 100%;
+            margin-top: auto;
+            align-items: center;
+            
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        /* footer p.footer-text {
+            align-items: center; 
+        } 
+        */
+
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <header>
+
     </header>
     <footer>
-      Holberton School
+        <p class="footer-text">Best School</p>
     </footer>
-  </body>
+</body>
 </html>
