--- a/web_static/index.html
+++ b/web_static/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/8-places.css">
+    <link rel="stylesheet" href="styles/100-places.css">
     <link rel="icon" type="image/x-icon" href="images/icon.png">
 </head>
 
@@ -62,15 +62,12 @@
                     $80
                 </div>
                 <div class="max_guest">
-                    <p></p>
                     2 Guests
                 </div>
                 <div class="number_rooms">
-                    <p></p>
                     1 Bedroom
                 </div>
                 <div class="number_bathrooms">
-                    <p></p>
                     1 Bathroom
                 </div>
                 <div class="user">
@@ -79,6 +76,31 @@
                 </div>
                 <div class="description">
                     Uni AIR is our top floor studio with a balcony that directly overlooks the horizon and the island's shore. Decorated with a bohemian feel, with a bamboo arch holding a dreamcatcher above the bed, this studio has a double bed,a fully equipped kitchen and an ensuite bathroom ensuring all the privacy and tranquility one is seeking.
+                </div>
+
+                <!-- Amenities  -->
+                <div class="amenities">
+                    <h2>Amenities</h2>
+                    <ul class="amenities-list">
+                        <li class="tv">TV</li>
+                        <li class="wifi">Wifi</li>
+                        <li class="pet">Pet Friendly</li>
+                    </ul>
+                </div>
+
+                <!-- Reviews -->
+                <div class="reviews">
+                    <h2>2 Reviews</h2>
+                    <ul class="reviews-list">
+                        <li>
+                            <h3>From Bob Dylan the 27th January 2017</h3>
+                            <p>Rushi is an epic host. Nothing more I can say 5 star!</p>
+                        </li>
+                        <li>
+                            <h3>From Cornor the 4th January 2017</h3>
+                            <p>Highly recommended</p>
+                        </li>
+                    </ul>
                 </div>
             </article>
             <article>
@@ -87,15 +109,12 @@
                     $65
                 </div>
                 <div class="max_guest">
-                    <p></p>
                     2 Guests
                 </div>
                 <div class="number_rooms">
-                    <p></p>
                     1 Bedroom
                 </div>
                 <div class="number_bathrooms">
-                    <p></p>
                     1 Bathroom
                 </div>
                 <div class="user">
@@ -104,6 +123,31 @@
                 </div>
                 <div class="description">
                     Uni AIR is our top floor studio with a balcony that directly overlooks the horizon and the island's shore. Decorated with a bohemian feel, with a bamboo arch holding a dreamcatcher above the bed, this studio has a double bed,a fully equipped kitchen and an ensuite bathroom ensuring all the privacy and tranquility one is seeking.
+                </div>
+
+                <!-- Amenities  -->
+                <div class="amenities">
+                    <h2>Amenities</h2>
+                    <ul class="amenities-list">
+                        <li class="tv">TV</li>
+                        <li class="wifi">Wifi</li>
+                        <li class="pet">Pet Friendly</li>
+                    </ul>
+                </div>
+
+                <!-- Reviews -->
+                <div class="reviews">
+                    <h2>2 Reviews</h2>
+                    <ul class="reviews-list">
+                        <li>
+                            <h3>From Bob Dylan the 27th January 2017</h3>
+                            <p>Rushi is an epic host. Nothing more I can say 5 star!</p>
+                        </li>
+                        <li>
+                            <h3>From Cornor the 4th January 2017</h3>
+                            <p>Highly recommended</p>
+                        </li>
+                    </ul>
                 </div>
             </article>
             <article>
@@ -112,15 +156,12 @@
                     $90
                 </div>
                 <div class="max_guest">
-                    <p></p>
                     2 Guests
                 </div>
                 <div class="number_rooms">
-                    <p></p>
                     1 Bedroom
                 </div>
                 <div class="number_bathrooms">
-                    <p></p>
                     1 Bathroom
                 </div>
                 <div class="user">
@@ -129,6 +170,30 @@
                 </div>
                 <div class="description">
                     Uni AIR is our top floor studio with a balcony that directly overlooks the horizon and the island's shore. Decorated with a bohemian feel, with a bamboo arch holding a dreamcatcher above the bed, this studio has a double bed,a fully equipped kitchen and an ensuite bathroom ensuring all the privacy and tranquility one is seeking.
+                </div>
+                <!-- Amenities  -->
+                <div class="amenities">
+                    <h2>Amenities</h2>
+                    <ul class="amenities-list">
+                        <li class="tv">TV</li>
+                        <li class="wifi">Wifi</li>
+                        <li class="pet">Pet Friendly</li>
+                    </ul>
+                </div>
+
+                <!-- Reviews -->
+                <div class="reviews">
+                    <h2>2 Reviews</h2>
+                    <ul class="reviews-list">
+                        <li>
+                            <h3>From Bob Dylan the 27th January 2017</h3>
+                            <p>Rushi is an epic host. Nothing more I can say 5 star!</p>
+                        </li>
+                        <li>
+                            <h3>From Cornor the 4th January 2017</h3>
+                            <p>Highly recommended</p>
+                        </li>
+                    </ul>
                 </div>
             </article>
         </section>
